syntax = "proto3";

package pb;

option go_package = "/pb/gen/go;gen";

message Attribute {
  uint32 line = 1;
  uint32 column = 2;
  string name = 3;
  string value = 4;
}

message TmphNode {
  uint32 line = 1;
  uint32 column = 2;
  optional string tagName = 3;
  repeated Attribute attributes = 4;
  repeated TmphNode childNodes = 5;
  optional string textContent = 6;
}

message TemplateData {
  string src = 1;
  repeated TmphNode nodes = 2;
}